# MonoPlusPlusV2

./: Auction.cpp  Auction.h  Board.cpp  Board.h  CMakeLists.txt  DiceRoller.cpp  DiceRoller.h  Gamestate.cpp  Gamestate.h  Go.cpp  Go.h  Move.cpp  Move.h  Player.cpp  Player.h  Property.cpp  Property.h  README.md  Rules.cpp  Rules.h  Space.h  Upgrade.cpp  Upgrade.h  hoarding.out  main.cpp  makefile
RandomFiles/: LosePropertyOnSimpleBoard3PlayersRolls.txt  MultiBuyRandomRolls.txt  Player1BuySet0,2Player2BuySet1OnSimpleBoardRolls.txt
Rules/: InfiniteMoney2ReRollsMaxRules.txt  InfiniteMoneyInfiniteReRollsRules.txt  InfiniteMoneyNoBuildRestrictionsRules.txt
